navbar almost finished, and started home section

--- a/src/app/section/home/home.component.html
+++ b/src/app/section/home/home.component.html
@@ -1,2 +1,14 @@
-<p>home works!</p>
-<p>home works!</p>
+<app-navbar></app-navbar>
+<div class="row no-gutters p-5">
+  <div
+    class="col-12 col-sm-6 col-md-8"
+    [ngStyle]="{
+      background: 'url(' + homePhoto + ')  no-repeat 0 0',
+      height: '20rem',
+      width: '65rem'
+    }"
+  >
+    <img src="assets/img/icons.png" alt="" />
+  </div>
+  <div class="col-6 col-md-4">hello</div>
+</div>
