--- a/src/app/section/home/home.component.css
+++ b/src/app/section/home/home.component.css
@@ -1,1 +1,6 @@
-/* No CSS *//*# sourceMappingURL=home.component.css.map */
+.main {
+  background-color: green;
+  width: 70%;
+}
+
+/*# sourceMappingURL=home.component.css.map */
