working on homepage

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  background-color: #24292e;
+}
 
 h1,
 h2,
