--- a/src/app/section/home/home.component.scss
+++ b/src/app/section/home/home.component.scss
@@ -1,14 +1,109 @@
-.main {
-  background-color: green;
-  width: 80%;
-  flex: 1;
-}
-
-.home-info {
-  width: 30%;
-  font-size: 12px;
-}
-
 .home-img {
-  width: 30%;
+  background-image: url(/assets/img/home.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 100% 100%;
+  width: 1500px;
+  padding: 150px;
+}
+.col-8 {
+  background: rgb(1, 92, 24);
+  background: linear-gradient(
+    90deg,
+    rgba(1, 92, 24, 1) 0%,
+    rgba(0, 139, 7, 1) 45%,
+    rgba(0, 88, 2, 1) 99%
+  );
+  border-radius: 1rem;
+}
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20rem;
+  color: #fff;
+  margin-bottom: 1rem;
+
+  h4 {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    letter-spacing: 3px;
+  }
+}
+
+.logo-home img {
+  margin-left: 20rem;
+  margin-bottom: 1rem;
+}
+.clock {
+  color: white;
+  margin-left: 20rem;
+  i {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-size: 15px;
+  }
+}
+
+// live matche style
+
+.live-matches {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.live-icons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+
+.live-icons img {
+  width: 40px;
+  height: 45px;
+  margin: 0 10px 5px 0;
+}
+
+// trending now style
+
+.trending-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 2rem;
+
+  .best-player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 3rem;
+  }
+}
+
+.best-player i {
+  font-size: 10px;
+}
+
+.primary-buttons {
+  align-items: center;
+}
+
+// filter section style
+
+.filter-data select {
+  background-color: rgb(255, 255, 255);
+  font-size: 15px;
+  margin-left: 5px;
+  padding: 5px;
+  border: 1px solid rgb(141, 138, 138);
+  border-radius: 5px;
+}
+
+.create-game select {
+  margin-left: 5px;
+  padding: 5px;
 }
