--- a/src/app/section/news/news.component.css
+++ b/src/app/section/news/news.component.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=news.component.css.map */
+.container {
+  background-color: #ebedff;
+}
+
+body {
+  width: 100%;
+}
+/*# sourceMappingURL=news.component.css.map */
