fixed image in homepage

--- a/src/app/section/home/home.component.scss
+++ b/src/app/section/home/home.component.scss
@@ -2,9 +2,9 @@
   background-image: url(/assets/img/home.png);
   background-repeat: no-repeat;
   background-position: left bottom;
-  background-size: 100% 100%;
+  background-size: 80%;
   width: 1500px;
-  padding: 150px;
+  padding: 80px;
 }
 .col-8 {
   background: rgb(1, 92, 24);
