almost finished homepage

--- a/src/app/section/home/home.component.html
+++ b/src/app/section/home/home.component.html
@@ -1,18 +1,81 @@
 <!-- Main Section  -->
+
 <div class="container">
   <div class="row">
-    <div class="col">
-      <div class="live-matches">
-        <h5>Live Matches &#8592; &#8594;</h5>
-      </div>
-      <div class="live-icons">
-        <img src="assets/img/teams-logo/manchester.png" />
-        <h5>&nbsp; 3 : 2 &nbsp;</h5>
-        <img src="assets/img/teams-logo/realmadrid.png" />
-      </div>
+    <div class="col lives">
+      <div class="live-matches justify-content-between">
+        <div class="live">
+          <h1>
+            Live matches
+            <a href="#"><i class="fa-solid fa-arrow-left"> </i></a> &nbsp;
+            <a href="#"><i class="fa-solid fa-arrow-right"> </i></a>
+          </h1>
 
-      <div class="teams">
-        <h5>Teams</h5>
+          <div class="live-icons justify-content-between">
+            <img src="assets/img/teams-logo/manchester.png" />
+            <h6>3 : 2 &nbsp;</h6>
+            <img src="assets/img/teams-logo/realmadrid.png" />
+          </div>
+          <div class="teams">
+            <h1>Teams</h1>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Team 1</h6>
+              &nbsp;&nbsp;
+              <a href="#"
+                >See profile &nbsp;<i class="fa-solid fa-arrow-right"> </i
+              ></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Team 1</h6>
+              &nbsp;&nbsp;
+              <a href="#"
+                >See profile &nbsp;<i class="fa-solid fa-arrow-right"> </i
+              ></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Team 1</h6>
+              &nbsp;&nbsp;
+              <a href="#"
+                >See profile &nbsp;<i class="fa-solid fa-arrow-right"> </i
+              ></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Team 1</h6>
+              &nbsp;&nbsp;
+              <a href="#"
+                >See profile &nbsp;<i class="fa-solid fa-arrow-right"> </i
+              ></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Team 1</h6>
+              &nbsp;&nbsp;
+              <a href="#"
+                >See profile &nbsp;<i class="fa-solid fa-arrow-right"> </i
+              ></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Team 1</h6>
+              &nbsp;&nbsp;
+              <a href="#"
+                >See profile &nbsp;<i class="fa-solid fa-arrow-right"> </i
+              ></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Team 1</h6>
+              &nbsp;&nbsp;
+              <a href="#"
+                >See profile &nbsp;<i class="fa-solid fa-arrow-right"> </i
+              ></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -45,75 +108,126 @@
 
     <!-- *******-->
 
-    <div class="col trending-section">
-      <div class="trendig">
-        <p>Trending now &#8592; &#8594;</p>
-        <div class="trending-img">
-          <img
-            src="assets\img\logo.png"
-            width="100"
-            height="100"
-            class="rounded-circle"
-          />
+    <div class="col">
+      <div class="trending-section">
+        <div class="trendig">
+          <h6>
+            Trending Now
+            <a href="#"><i class="fa-solid fa-arrow-left"> </i></a> &nbsp;
+            <a href="#"><i class="fa-solid fa-arrow-right"> </i></a>
+          </h6>
+          <div class="trending-img">
+            <img
+              src="assets\img\logo.png"
+              width="100"
+              height="100"
+              class="rounded-circle"
+            />
+          </div>
+          <div class="best-player">
+            <h6>Best Player</h6>
+            <small> <i class="fa-solid fa-futbol"></i> &nbsp;300 Goals</small>
+          </div>
+          <div class="d-flex justify-content-center">
+            <button type="button" class="btn btn-outline-info">
+              View Profile
+            </button>
+          </div>
         </div>
-        <div class="best-player">
-          <h6>Best Player</h6>
-          <i class="fa-solid fa-futbol">300 Goals</i>
-        </div>
-        <div class="d-flex justify-content-center">
-          <button type="button" class="btn btn-outline-info">
-            View Profile
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Latest Matches, Filter, View All  -->
-  <div class="container pt-4">
-    <div class="row justify-content-md-center">
-      <div class="col col-lg-2">
-        <div class="latest-matches">
-          <h5>Latest Matches</h5>
-        </div>
-      </div>
-
-      <!-- ******* Filtered matches controller ******-->
-
-      <div class="col-md-auto">
-        <div class="filter-data">
-          <select name="football" id="competitons">
-            <option value="football">Football</option>
-            <option value="Volley">Volley</option>
-            <option value="basketball">Basketball</option>
-          </select>
-          <select name="results" id="results">
-            <option value="5 vs 5">5 vs 5</option>
-            <option value="6 vs 6">6 vs 6</option>
-            <option value="7 vs 7">7 vs 7</option>
-          </select>
-          <select name="location" id="location">
-            <option value="London">London</option>
-            <option value="Bayern">Bayern</option>
-          </select>
-        </div>
-      </div>
-      <div class="col col-lg-2">
-        <button class="btn btn-info">View All</button>
       </div>
     </div>
   </div>
 </div>
 
+<!-- Latest Matches, Filter, View All  -->
+<div class="container pt-4">
+  <div class="row justify-content-md-center">
+    <div class="col col-lg-2">
+      <div class="latest-matches">
+        <h5>Latest Matches</h5>
+      </div>
+    </div>
+
+    <!-- ******* Filtered matches controller ******-->
+
+    <div class="col-md-auto">
+      <div class="filter-data">
+        <select name="football" id="competitons">
+          <option value="football">Football</option>
+          <option value="Volley">Volley</option>
+          <option value="basketball">Basketball</option>
+        </select>
+        <select name="results" id="results">
+          <option value="5 vs 5">5 vs 5</option>
+          <option value="6 vs 6">6 vs 6</option>
+          <option value="7 vs 7">7 vs 7</option>
+        </select>
+        <select name="location" id="location">
+          <option value="London">London</option>
+          <option value="Bayern">Bayern</option>
+        </select>
+      </div>
+    </div>
+    <div class="col col-lg-2">
+      <button class="btn btn-info">View All</button>
+    </div>
+  </div>
+</div>
+
 <!-- filtered matches section -->
-<div class="row justify-content-end pt-3">
-  <div class="col-4">
-    <div class="col justify-content-between live-icons">
+<div class="row justify-content-end pt-2">
+  <div class="col-4 mt-4 filtered-matches">
+    <div class="col filtered-matches-1 justify-content-between live-icons">
       <img src="assets/img/teams-logo/manchester.png" />
       <h6>Team 1</h6>
       <small>vs</small>
       <img src="assets/img/teams-logo/realmadrid.png" />
       <h6>Team 2</h6>
+      <i class="fa-solid fa-clock"></i> 17: 00 &nbsp; &nbsp;
+      <i class="fa-solid fa-map-marker"></i> London
+      <i class="fa fa-heart" style="font-size: 25px"></i>
+      <a href="#"
+        >View Details &nbsp;<i class="fa-solid fa-arrow-right"> </i
+      ></a>
+    </div>
+    <div class="col filtered-matches-1 justify-content-between live-icons">
+      <img src="assets/img/teams-logo/manchester.png" />
+      <h6>Team 1</h6>
+      <small>vs</small>
+      <img src="assets/img/teams-logo/realmadrid.png" />
+      <h6>Team 2</h6>
+      <i class="fa-solid fa-clock"></i> 17: 00 &nbsp; &nbsp;
+      <i class="fa-solid fa-map-marker"></i> London
+      <i class="fa fa-heart" style="font-size: 25px; color: red"></i>
+      <a href="#"
+        >View Details &nbsp;<i class="fa-solid fa-arrow-right"> </i
+      ></a>
+    </div>
+    <div class="col filtered-matches-1 justify-content-between live-icons">
+      <img src="assets/img/teams-logo/manchester.png" />
+      <h6>Team 1</h6>
+      <small>vs</small>
+      <img src="assets/img/teams-logo/realmadrid.png" />
+      <h6>Team 2</h6>
+      <i class="fa-solid fa-clock"></i> 17: 00 &nbsp; &nbsp;
+      <i class="fa-solid fa-map-marker"></i> London
+      <i class="fa fa-heart" style="font-size: 25px"></i>
+      <a href="#"
+        >View Details &nbsp;<i class="fa-solid fa-arrow-right"> </i
+      ></a>
+    </div>
+    <div class="col filtered-matches-1 justify-content-between live-icons">
+      <img src="assets/img/teams-logo/manchester.png" />
+      <h6>Team 1</h6>
+      <small>vs</small>
+      <img src="assets/img/teams-logo/realmadrid.png" />
+      <h6>Team 2</h6>
+      <i class="fa-solid fa-clock"></i> 17: 00 &nbsp; &nbsp;
+      <i class="fa-solid fa-map-marker"></i> London
+      <i class="fa fa-heart" style="font-size: 48px; color: red"></i>
+      <a href="#"
+        >View Details &nbsp;<i class="fa-solid fa-arrow-right"> </i
+      ></a>
     </div>
   </div>
 
