--- a/src/app/section/home/home.component.html
+++ b/src/app/section/home/home.component.html
@@ -75,6 +75,34 @@
               ></a>
             </div>
           </div>
+
+          <div class="teams">
+            <h1>Best players</h1>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Player 1</h6>
+              &nbsp;&nbsp;
+              <a href="#">60 &nbsp;<i class="fa-solid fa-chart-column"></i></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Player 2</h6>
+              &nbsp;&nbsp;
+              <a href="#">60 &nbsp;<i class="fa-solid fa-chart-column"></i></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Player 3</h6>
+              &nbsp;&nbsp;
+              <a href="#">60 &nbsp;<i class="fa-solid fa-chart-column"></i></a>
+            </div>
+            <div class="teams-list live-icons">
+              <img src="assets/img/teams-logo/manchester.png" />
+              <h6>Player 4</h6>
+              &nbsp;&nbsp;
+              <a href="#">60 &nbsp;<i class="fa-solid fa-chart-column"></i></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -224,7 +252,7 @@
       <h6>Team 2</h6>
       <i class="fa-solid fa-clock"></i> 17: 00 &nbsp; &nbsp;
       <i class="fa-solid fa-map-marker"></i> London
-      <i class="fa fa-heart" style="font-size: 48px; color: red"></i>
+      <i class="fa fa-heart" style="font-size: 25px"></i>
       <a href="#"
         >View Details &nbsp;<i class="fa-solid fa-arrow-right"> </i
       ></a>
