added best player section

--- a/src/app/section/home/home.component.html
+++ b/src/app/section/home/home.component.html
@@ -1,5 +1,4 @@
-<!-- Main Section  -->
-
+<!-- *** Live Matches *** -->
 <div class="container">
   <div class="row">
     <div class="col lives">
@@ -76,6 +75,7 @@
             </div>
           </div>
 
+          <!-- *** Best Players *** -->
           <div class="teams">
             <h1>Best players</h1>
             <div class="teams-list live-icons">
@@ -107,8 +107,7 @@
       </div>
     </div>
 
-    <!-- *******-->
-
+    <!-- **** Main Div***-->
     <div class="col-8">
       <div class="home-img">
         <div class="info">
@@ -134,8 +133,7 @@
       </div>
     </div>
 
-    <!-- *******-->
-
+    <!-- **** trendin Section ***-->
     <div class="col">
       <div class="trending-section">
         <div class="trendig">
