--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container p-2">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home</a>
@@ -19,7 +19,7 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="nav-link dropdown-toggle" href="">
+    <div class="nav-link dropdown-toggle justify-content-between" href="">
       <img
         src="assets\img\logo.png"
         width="40"
