Removed the content max width from 960 px and made it a comment.

--- a/src/app/section/news/news.component.scss
+++ b/src/app/section/news/news.component.scss
@@ -1,7 +1,13 @@
-.container {
-    background-color: #ebedff;
+.container{
+    background-color: #E2EBF2;
 }
 
 body {
     width: 100%;
+    border-radius: 5%;
+}
+
+a {
+    text-decoration: none;
+    color: #333333;
 }
