added teams page

--- a/src/app/section/teams/teams.component.html
+++ b/src/app/section/teams/teams.component.html
@@ -1,1 +1,132 @@
-<p>teams works!</p>
+<ul class="list-unstyled">
+  <li class="media">
+    <img
+      class="mr-3"
+      src="assets/img/teams-logo/astonvilla.png"
+      alt="Generic placeholder image"
+    />
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Aston Villa FC</h5>
+      Aston Villa Football Club is a professional football club based in Aston,
+      Birmingham, England. The club competes in the Premier League, the top tier
+      of the English football league system. Founded in 1874, they have played
+      at their home ground, Villa Park, since 1897. Aston Villa were one of the
+      founder members of the Football League in 1888 and of the Premier League
+      in 1992.[3] Villa are one of the five English clubs to have won the
+      European Cup, in 1981–82. They have also won the Football League First
+      Division seven times, the FA Cup seven times, the League Cup five times,
+      and the European (UEFA) Super Cup once. The club are currently ranked 5th
+      in the all-time English top flight table, since its creation in 1888.[4]
+      Villa have a fierce local rivalry with Birmingham City and the Second City
+      derby between the teams has been played since 1879.[5] The club's
+      traditional kit colours are claret shirts with sky blue sleeves, white
+      shorts and sky blue socks. Their traditional club badge is of a rampant
+      lion.[6][7] The club is currently owned by the NSWE group, a company owned
+      by the Egyptian billionaire Nassef Sawiris and the American billionaire
+      Wes Edens.
+    </div>
+  </li>
+  <li class="media my-4">
+    <img
+      class="mr-3"
+      src="assets/img/teams-logo/westham.png"
+      alt="Generic placeholder image"
+    />
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">West Ham United FC</h5>
+      West Ham United Football Club is an English professional football club
+      that plays its home matches in Stratford, East London. The club competes
+      in the Premier League, the top tier of English football. The club plays at
+      the London Stadium, having moved from their former home, the Boleyn
+      Ground, in 2016. The club was founded in 1895 as Thames Ironworks and
+      reformed in 1900 as West Ham United. They moved to the Boleyn Ground in
+      1904, which remained their home ground for more than a century. The team
+      initially competed in the Southern League and Western League before
+      joining the Football League in 1919. They were promoted to the top flight
+      in 1923, when they were also losing finalists in the first FA Cup Final
+      held at Wembley. In 1940, the club won the inaugural Football League War
+      Cup.
+    </div>
+  </li>
+  <li class="media">
+    <img
+      class="mr-3"
+      src="assets/img/teams-logo/strokecity.png"
+      alt="Generic placeholder image"
+    />
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Stoke City FC</h5>
+      Stoke City Football Club is an English professional football club based in
+      Stoke-on-Trent, Staffordshire. Founded as Stoke Ramblers in 1863, it
+      changed its name to Stoke Football Club in 1878 and then to Stoke City in
+      1925 after Stoke-on-Trent was granted city status. It was one of the
+      twelve founding members of the Football League in 1888.[5] It competes in
+      the Championship, the second tier of English football. They won their
+      first and only major trophy to date, the League Cup, in 1972, when they
+      beat Chelsea 2–1. Their highest league finish in the top division is
+      fourth, in the 1935–36 and 1946–47 seasons. They played in the FA Cup
+      Final in 2011, finishing runners-up to Manchester City; and reached FA Cup
+      semi-finals in 1899, 1971 and 1972. They competed in European football in
+      1972–73, 1974–75 and 2011–12. They won the Football League Trophy in 1992
+      and in 2000.
+    </div>
+  </li>
+  <li class="media">
+    <img
+      class="mr-3"
+      src="assets/img/teams-logo/sunderland.png"
+      alt="Generic placeholder image"
+    />
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Sunderland AFC</h5>
+      Sunderland Association Football Club (/ˈsʌndərlənd/ (listen), locally
+      /ˈsʊndlən/) is an English professional football club based in the city of
+      Sunderland, Tyne and Wear. In the 2022-23 season, Sunderland will play in
+      the Championship, the second tier of English football, following their
+      promotion in 2021-22. Since its formation in 1879,[1] the club has won six
+      top-flight (First Division, now the Premier League) titles (1892, 1893,
+      1895, 1902, 1913, and 1936), and has finished runners-up five times. The
+      club has also won the FA Cup twice (1937 and 1973) and been runners-up
+      twice (1913 and 1992), as well as winning the FA Charity Shield in 1936
+      and being finalists the following year. Sunderland have also been Football
+      League Cup finalists in 1985 and 2014.
+    </div>
+  </li>
+  <li class="media">
+    <img
+      class="mr-3"
+      src="assets/img/teams-logo/everton.png"
+      alt="Generic placeholder image"
+    />
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Everton FC</h5>
+      Everton Football Club (/ˈɛvərtən/) is an English professional association
+      football club based in Liverpool that competes in the Premier League, the
+      top tier of English football. The club was a founder member of the
+      Football League in 1888 and has competed in the top division for a record
+      118 seasons, having missed only four top-flight seasons (1930–31, 1951–52,
+      1952–53 and 1953–54). Everton is the second-longest continuous serving
+      club in English top flight football[2] and ranks third in the all-time
+      points rankings.[3] The club has won nine league titles, five FA Cups, one
+      European Cup Winners' Cup and nine Charity Shields.
+    </div>
+  </li>
+  <li class="media">
+    <img
+      class="mr-3"
+      src="assets/img/teams-logo/astonvilla.png"
+      alt="Generic placeholder image"
+    />
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Manchester City FC</h5>
+      Manchester City Football Club is an English football club based in
+      Bradford, Manchester that competes in the Premier League, the top flight
+      of English football. Founded in 1880 as St. Mark's (West Gorton), it
+      became Ardwick Association Football Club in 1887 and Manchester City in
+      1894. The club's home ground is the Etihad Stadium in east Manchester, to
+      which it moved in 2003, having played at Maine Road since 1923. The club
+      adopted their sky blue home shirts in 1894.[3] It is the fifth-most
+      successful club in English football.
+    </div>
+  </li>
+</ul>
