feat(single-news) WIP

--- a/src/app/section/news/news.component.html
+++ b/src/app/section/news/news.component.html
@@ -1,7 +1,7 @@
 <div class="container rounded p-0">
     <ul class="list-unstyled border border-dark p-3">
         <li >
-            <a href="https://www.skysports.com/football/news/11661/12617202/premier-league-final-day-whats-still-to-play-for">
+            <a href="/news/1">
                 <h2>Premier League Final Day: What's still to play for?<span style="text-decoration:none;">22/05/2022</span></h2>
             </a>
             <div class="row my-5">
@@ -24,7 +24,7 @@
             
         </li>
         <li>
-            <a href="https://www.skysports.com/f1/news/12433/12618346/spanish-grand-prix-lewis-hamilton-vows-to-compete-with-ferrari-as-mercedes-solve-bouncing-issues">
+            <a href="/news/2">
                 <h3>Spanish Grand Prix: Lewis Hamilton vows to compete with Ferrari</h3>
             </a>
             <div class="row my-5">
