Ndryshimi i navbarit dhe stilizimi i news component

--- a/src/app/section/news/news.component.scss
+++ b/src/app/section/news/news.component.scss
@@ -1,5 +1,6 @@
 .container{
     background-color: #E2EBF2;
+    text-align: center;
 }
 
 body {
@@ -10,4 +11,8 @@ body {
 a {
     text-decoration: none;
     color: #333333;
+}
+
+ul{
+    border-radius: 10px;
 }
