--- a/src/app/section/news/single-news/single-news.component.html
+++ b/src/app/section/news/single-news/single-news.component.html
@@ -1,1 +1,33 @@
-<p>single-news works!</p>
+<div class="container border border-dark shadow">
+    <div class="row"><h2>Premier League Final Day: What's still to play for?<br><br></h2></div>
+    <div class="row">
+        <div class="col-7"><p>The title, third place, Champions League qualification, Europa League qualification and relegation to be decided on Sunday;
+            Man City vs Aston Villa, Liverpool vs Wolves and Brentford vs Leeds live on Sky Sports; Watch all the goals on Soccer Special;
+            All games kick-off at 4pm
+            Third place: Chelsea still need a point to mathematically secure third place although it would require an unprecedented swing 
+            on goal difference for Tottenham to leapfrog Thomas Tuchel's side.
+            Champions League qualification: Tottenham effectively just need a point at Norwich to be sure of finishing fourth.
+            Barring another improbable swing on goal difference, Arsenal can only jump ahead if they beat Everton and Tottenham lose at Norwich.
+            <br>
+            <br>
+            <br>
+            Europa League: Either Arsenal or Tottenham will be joined in the Europa League by Manchester United or West Ham - Man Utd currently
+             head the Hammers by two points but David Moyes' side have a much better goal difference.
+             <br>
+             <br>
+             <br>
+             Europa League Conference: Were Manchester United to lose or draw at Palace and West Ham beat Brighton on the final day then Man Utd will play in the Europa League Conference next season.
+             <br>
+             <br>
+             <br>
+             Relegation: One of Burnley and Leeds will be relegated alongside Norwich and Watford. Although Burnley and Leeds will start the final day level on points, Leeds' vastly inferior goal difference means they will have to better Burnley's result to stay up. Burnley are sure of survival if they win or if Leeds lose.
+            <br>
+            <br>
+            </div>
+            <div class="col "><img class="rounded" src="assets\img\1.jpg" alt="PLFD" width="512" height="288">
+                <br>
+                <br>
+                <a href="https://www.skysports.com/football/news/11661/12617202/premier-league-final-day-whats-still-to-play-for">Source: SkySports</a></div>
+    </div>
+
+</div>
