--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light border shadow rounded">
   <div class="container">
     <ul class="navbar-nav">
       <li class="nav-item active">
@@ -19,15 +19,14 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="nav-link dropdown-toggle justify-content-between" href="">
+    <div class="nav-link justify-content-between d-flex flex-row" href="">
       <img
         src="assets\img\logo.png"
         width="40"
         height="40"
         class="rounded-circle"
       />
-      <h6>Welcome {{ userName }}</h6>
-      <span>Manager</span>
+      <h6 class="my-2">Welcome {{ userName }}</h6>
     </div>
   </div>
 </nav>
